syntax = "proto3";
package io.bsoa.rpc.grpc;
option java_package = "io.bsoa.rpc.grpc";
//option java_multiple_files = true;
//option java_outer_classname = "HelloServiceProto";

// 对应四种rpc方式
service ByeService {
    //  request-response
    rpc bye (ByeRequest) returns (ByeResponse) {};
}

message ByeRequest {
    string name  = 1;
    int32 id    = 2;
}

message ByeResponse {
    string message = 1;
}